log
Wed 20 Mar 2024 08:06:20 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
cef3bc4
Wed 20 Mar 2024 08:06:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1cfa812
Wed 20 Mar 2024 08:08:44 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
1dba5ba
Wed 20 Mar 2024 08:08:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f456352
Wed 20 Mar 2024 08:12:15 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:83:24: error: too many arguments to function ‘popCurrent’
   83 |     if (*dato == elem) popCurrent(L, elem);
      |                        ^~~~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
a8d57af
Wed 20 Mar 2024 08:12:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
dd9df65
Wed 20 Mar 2024 08:19:39 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
a37e49d
Wed 20 Mar 2024 08:20:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fbf4b01
Wed 20 Mar 2024 08:22:57 PM UTC: 
 exercises.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  104 |   int * elem:
      |             ^
exercises.c:104:13: error: expected expression before ‘:’ token
exercises.c:106:9: error: ‘elem’ undeclared (first use in this function)
  106 |   while(elem != NULL){
      |         ^~~~
exercises.c:106:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7d5f303
Wed 20 Mar 2024 08:23:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61e113f
Wed 20 Mar 2024 08:23:44 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
06cb641
Wed 20 Mar 2024 08:24:37 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
fbfaa5d
Wed 20 Mar 2024 08:26:48 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
4b2d6f8
Wed 20 Mar 2024 08:27:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b30169b
Wed 20 Mar 2024 08:42:56 PM UTC: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:132:17: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
  132 |       ultDato = last(lista);
      |                 ^~~~
exercises.c:132:15: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  132 |       ultDato = last(lista);
      |               ^
exercises.c:136:15: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  136 |         dato  = last(lista);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
fbf6b09
Wed 20 Mar 2024 08:44:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:132:17: error: implicit declaration of function ‘back’ [-Werror=implicit-function-declaration]
  132 |       ultDato = back(lista);
      |                 ^~~~
exercises.c:132:15: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  132 |       ultDato = back(lista);
      |               ^
exercises.c:136:15: error: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  136 |         dato  = back(lista);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
9dad700
Wed 20 Mar 2024 08:52:09 PM UTC: 
 exercises.c | 21 +++++++--------------
 1 file changed, 7 insertions(+), 14 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:132:6: error: expected statement before ‘)’ token
  132 |     })
      |      ^
Compilation failed
9dad700
Wed 20 Mar 2024 09:03:08 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
9538335
Sat 23 Mar 2024 09:11:46 PM UTC: 
 exercises.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
 tests:  7|1
total_score: 60/70
171e850
Sat 23 Mar 2024 09:20:39 PM UTC: 
 exercises.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:128:14: error: passing argument 1 of ‘top’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  128 |   dato = top(cadena);
      |              ^~~~~~
      |              |
      |              char *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:14:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘char *’
   14 | void *top(Stack *stack) { return first(stack); }
      |           ~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:132:11: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  132 |       pop(cadena);
      |           ^~~~~~
      |           |
      |           char *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:17:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘char *’
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:126:10: error: unused variable ‘P2’ [-Werror=unused-variable]
  126 |   Stack* P2 = create_stack();
      |          ^~
exercises.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
  136 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1944ac6
